--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -15,16 +15,16 @@
       <div class="collapse navbar-collapse" id="navbarExample01">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
           <li class="nav-item active">
-            <%= link_to "1.Home", "#1.Home", class:"nav-link"%>
+            <%= link_to "1.Projet", "#1.Projet", class:"nav-link"%>
           </li>
           <li class="nav-item">
-            <%= link_to "2.Features", "#2.Features", class:"nav-link" %>
+            <%= link_to "2.Parcours", "#2.Parcours", class:"nav-link" %>
           </li>
           <li class="nav-item">
-            <%= link_to "3.Pricing", "#3.Pricing", class:"nav-link" %>
+            <%= link_to "3.prix", "#3.prix", class:"nav-link" %>
           </li>
           <li class="nav-item">
-            <%= link_to "4.About", "#4.About", class:"nav-link" %>
+            <%= link_to "4.contact", "#4.contact", class:"nav-link" %>
           </li>
         </ul>
       </div>
