--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,5 +1,7 @@
+  
+
   <!-- Jumbotron -->
-  <div class="p-5 text-center bg-light">
+  <div class="p-5 text-center bg-light", id="top">
     <h1 class="mb-3">Heading</h1>
     <h4 class="mb-3">Subheading</h4>
     <a class="btn btn-primary" href="" role="button">Call to action</a>
@@ -56,4 +58,4 @@
 </div>
 
 
-<%= link_to "top page", "#top" %>
+
