--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -1,5 +1,5 @@
   <!-- Navbar -->
-  <nav class="navbar navbar-expand-lg navbar-light bg-white", id="top">
+  <nav class="navbar navbar-expand-lg navbar-light bg-white sticky-top ">
     <div class="container-fluid">
       <button
         class="navbar-toggler"
@@ -14,16 +14,19 @@
       </button>
       <div class="collapse navbar-collapse" id="navbarExample01">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-          <li class="nav-item active">
+          <li class="nav-item">
+            <%= link_to "0.Logo", root_path, class:"nav-link"%>
+          </li>
+          <li class="nav-item navbar-nav ms-auto ">
             <%= link_to "1.Projet", "#1.Projet", class:"nav-link"%>
           </li>
-          <li class="nav-item">
+          <li class="nav-item ">
             <%= link_to "2.Parcours", "#2.Parcours", class:"nav-link" %>
           </li>
-          <li class="nav-item">
+          <li class="nav-item  ">
             <%= link_to "3.prix", "#3.prix", class:"nav-link" %>
           </li>
-          <li class="nav-item">
+          <li class="nav-item ">
             <%= link_to "4.contact", "#4.contact", class:"nav-link" %>
           </li>
         </ul>
