--- a/app/views/layouts/_card.html.erb
+++ b/app/views/layouts/_card.html.erb
@@ -6,69 +6,69 @@
     alt="..."
   />
       <div class="card-body">
-        <h5 class="card-title">Card title</h5>
+        <h5 class="card-title">Title project</h5>
         <p class="card-text">
+          Description:<br>
           Some quick example text to build on the card title and make up the bulk of the
           card's content.
         </p>
       </div>
-      <ul class="list-group list-group-flush">
-        <li class="list-group-item">Cras justo odio</li>
-        <li class="list-group-item">Dapibus ac facilisis in</li>
-        <li class="list-group-item">Vestibulum at eros</li>
-      </ul>
-      <div class="card-body">
-        <a href="#" class="card-link">Card link</a>
-        <a href="#" class="card-link">Another link</a>
+      <div class="card-footer">
+        <p class="card-text">
+          Compétence:<br>
+        </p>
+      </div>
+      <div class="card-footer text-center">
+        <a href="#" class="card-link">Heroku</a>
+        <a href="#" class="card-link">Github</a>
       </div>
     </div>
-
-     <div class="card m-5 shadow" style="width: 15rem">
+      <div class="card m-5 shadow" style="width: 15rem">
     <img
     src="https://mdbootstrap.com/img/new/standard/city/062.jpg"
     class="card-img-top mt-3 border-3 border-dark rounded "
     alt="..."
   />
       <div class="card-body">
-        <h5 class="card-title">Card title</h5>
+        <h5 class="card-title">Title project</h5>
         <p class="card-text">
+          Description:<br>
           Some quick example text to build on the card title and make up the bulk of the
           card's content.
         </p>
       </div>
-      <ul class="list-group list-group-flush">
-        <li class="list-group-item">Cras justo odio</li>
-        <li class="list-group-item">Dapibus ac facilisis in</li>
-        <li class="list-group-item">Vestibulum at eros</li>
-      </ul>
-      <div class="card-body">
-        <a href="#" class="card-link">Card link</a>
-        <a href="#" class="card-link">Another link</a>
+      <div class="card-footer">
+        <p class="card-text">
+          Compétence:<br>
+        </p>
+      </div>
+      <div class="card-footer text-center">
+        <a href="#" class="card-link">Heroku</a>
+        <a href="#" class="card-link">Github</a>
       </div>
     </div>
-
-     <div class="card m-5 shadow" style="width: 15rem">
+      <div class="card m-5 shadow" style="width: 15rem">
     <img
     src="https://mdbootstrap.com/img/new/standard/city/062.jpg"
     class="card-img-top mt-3 border-3 border-dark rounded "
     alt="..."
   />
       <div class="card-body">
-        <h5 class="card-title">Card title</h5>
+        <h5 class="card-title">Title project</h5>
         <p class="card-text">
+          Description:<br>
           Some quick example text to build on the card title and make up the bulk of the
           card's content.
         </p>
       </div>
-      <ul class="list-group list-group-flush">
-        <li class="list-group-item">Cras justo odio</li>
-        <li class="list-group-item">Dapibus ac facilisis in</li>
-        <li class="list-group-item">Vestibulum at eros</li>
-      </ul>
-      <div class="card-body">
-        <a href="#" class="card-link">Card link</a>
-        <a href="#" class="card-link">Another link</a>
+      <div class="card-footer">
+        <p class="card-text">
+          Compétence:<br>
+        </p>
+      </div>
+      <div class="card-footer text-center">
+        <a href="#" class="card-link">Heroku</a>
+        <a href="#" class="card-link">Github</a>
       </div>
     </div>
-
-</div>
+  </div>
