--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -23,7 +23,7 @@
   />
         </head>
         <%= render :partial=>'layouts/navbar' %>
-        <body>
+        <body class="body">
           <%= yield %>
           <%= render :partial=>'layouts/footer' %>
           <!-- MDB -->
