--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,7 +1,7 @@
-  <footer class="bg-light text-center text-lg-start">
+  <footer class=" text-center text-lg-start page">
   <!-- Copyright -->
   
-  <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
+  <div class="text-center p-3">
     <%= link_to "top page", "#top", class:"mx-2"%>
     © 2020 Copyright:
     <a class="text-dark" href="https://mdbootstrap.com/">MDBootstrap.com</a>
