--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -1,36 +1,21 @@
   <!-- Navbar -->
-  <nav class="navbar navbar-expand-lg navbar-light bg-white sticky-top ">
-    <div class="container-fluid">
-      <button
-        class="navbar-toggler"
-        type="button"
-        data-mdb-toggle="collapse"
-        data-mdb-target="#navbarExample01"
-        aria-controls="navbarExample01"
-        aria-expanded="false"
-        aria-label="Toggle navigation"
-      >
-        <i class="fas fa-bars"></i>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarExample01">
-        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+  <nav class="navbar navbar-expand-lg navbar-light sticky-top page">
+        <ul class="navbar-nav me-auto mb-2 mb-lg-0 d-flex flex-row">
           <li class="nav-item">
-            <%= link_to "0.Logo", root_path, class:"nav-link"%>
+            <%= link_to "0.Logo", root_path, class:"nav-link mx-3"%>
           </li>
-          <li class="nav-item navbar-nav ms-auto ">
-            <%= link_to "1.Projet", "#1.Projet", class:"nav-link"%>
+          <li class="nav-item">
+            <%= link_to "1.Projet", "#1.Projet", class:"nav-link mx-3"%>
           </li>
           <li class="nav-item ">
-            <%= link_to "2.Parcours", "#2.Parcours", class:"nav-link" %>
+            <%= link_to "2.Parcours", "#2.Parcours", class:"nav-link mx-3" %>
           </li>
           <li class="nav-item  ">
-            <%= link_to "3.prix", "#3.prix", class:"nav-link" %>
+            <%= link_to "3.prix", "#3.prix", class:"nav-link mx-3" %>
           </li>
           <li class="nav-item ">
-            <%= link_to "4.contact", "#4.contact", class:"nav-link" %>
+            <%= link_to "4.contact", "#4.contact", class:"nav-link mx-3" %>
           </li>
         </ul>
-      </div>
-    </div>
   </nav>
   <!-- Navbar -->
