--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -2,9 +2,9 @@
   <!-- Copyright -->
   
   <div class="text-center p-3">
-    <%= link_to "top page", "#top", class:"mx-2"%>
+
     © 2020 Copyright:
-    <a class="text-dark" href="https://mdbootstrap.com/">MDBootstrap.com</a>
+    <a class="text-dark" href="http://ronan-lemeunier.fr">ronan-lemeunier.fr</a>
   </div>
   <!-- Copyright -->
   </footer>
