--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -10,11 +10,11 @@
           <li class="nav-item ">
             <%= link_to "2.Parcours", "#2.Parcours", class:"nav-link mx-3" %>
           </li>
-          <li class="nav-item  ">
-            <%= link_to "3.prix", "#3.prix", class:"nav-link mx-3" %>
-          </li>
+          <!--<li class="nav-item  ">
+            <%= link_to "4.prix", "#4.prix", class:"nav-link mx-3" %>
+          </li>-->
           <li class="nav-item ">
-            <%= link_to "4.contact", "#4.contact", class:"nav-link mx-3" %>
+            <%= link_to "3.contact", "#3.contact", class:"nav-link mx-3" %>
           </li>
         </ul>
   </nav>
