--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -31,5 +31,8 @@
   type="text/javascript"
   src="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/3.3.0/mdb.min.js"
   ></script>
+          <!-- script for change url -->
+          <script src="http://code.jquery.com/jquery-2.1.4.min.js"></script>
+          <script src="./index.js"></script>
         </body>
       </html>
