--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -41,7 +41,7 @@ html {
 .pagejum {
   background-color: #FFCC80;
   background-color: rgba(0, 0, 0, 0.1);
-  background-image: url("https://cdn.discordapp.com/attachments/318828901931548682/834189911568416808/binary-4791836_1920.jpg");
+  background-image: url("#");
   background-position: center;
   background-repeat: no-repeat;
   height:300px;
